# controllers/EstudianteController.js
@@ -2,28 +2,27 @@ const { Estudiante } = require('../models'); // Importa los modelos necesarios
 
 const getAllEstudiantes = async (req, res) => {
     try {
-        console.log("Obteniendo todos los estudiantes");
-        const allEstudiantes = await Estudiante.findAll({
-            // include: [
-            //     {
-            //         model: estado,
-            //         attributes: ['estado_id']
-            //     },
-            //     {
-            //         model: roles,
-            //         attributes: ['rol_id']
-            //     },
-            //     {
-            //         model: carrera,
-            //         attributes: ['carrera_id']
-            //     }
-            // ]
-        });
+        const allEstudiantes = await Estudiante.findAll();
         return allEstudiantes;
     }
     catch (error) {
         console.log("Error al obtener los estudiantes");
         // return res.status(500).json({ error: error.message });
+    }
+}
+const getEstudianteById = async (req, res) => {
+    try {
+        console.log("Obteniendo estudiante por id");
+        const estudiante = await Estudiante.findOne({
+            where: {
+                id: req.params.id
+            }
+        });
+        return estudiante;
+    }
+    catch (error) {
+        console.log("Error al obtener el estudiante por id");
+        return res.status(500).json({ error: error.message });
     }
 }
 
@@ -39,5 +38,6 @@ const createEstudiante = async (req, res) => {
 
 module.exports = {
     getAllEstudiantes,
-    createEstudiante
+    createEstudiante,
+    getEstudianteById
 }
